--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿﻿@model List<Todo>
+﻿@model List<Todo>
+
 @if (ViewBag.ErrorMsg != null)
 {
     <div class="alert alert-danger alert-dismissible fade show" role="alert">
